ingress/ingress-nginx/mutual/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/ca-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
  name: ingress-client-certificate-authentication
  namespace: default
spec:
  tls:
  - hosts:
    - client.auth.localhost
    secretName: tls-secret
  rules:
  - host: client.auth.localhost
    http:
      paths:
      - backend:
          serviceName: backend-service
          servicePort: 80
        path: /
